--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>טיימר שחמט</title>
 
- <style>
+<style>
   body {
     font-family: "Heebo", sans-serif;
     text-align: center;
@@ -22,8 +22,23 @@
     padding: 8px 12px;
     border-radius: 60px;
     border: 1px solid #ccc;
-    background-color: #2593eb;
-    color: yellow;
+  }
+
+  /* עיצוב קלטים של שמות */
+  #p1 {
+    background-color: #ffffff;
+    color: #1d4ed8; /* כחול בהיר לשחקן הלבן */
+    font-weight: bold;
+    border: 2px solid #1d4ed8;
+    box-shadow: 0 0 6px #93c5fd;
+  }
+
+  #p2 {
+    background-color: #111;
+    color: #f9fafb; /* לבן לשחקן השחור */
+    font-weight: bold;
+    border: 2px solid #000;
+    box-shadow: 0 0 6px #666;
   }
 
   /* עטיפה של כפתור + תפריט */
@@ -105,8 +120,7 @@
   #resetBtn:hover {
     background: #b91c1c;
   }
-</style>
-</head>
+</style></head>
 <body>
   <h1>⏱️ טיימר שחמט</h1>
   <br>
